lab1/Test/L1-A-13-31.output
Error Type B at Line 8
Error Type B at Line 14
Error Type A at Line 29
Error Type B at Line 33
Error Type B at Line 37
Error Type B at Line 40
Error Type B at Line 54
